--- a/install/Chart.yaml
+++ b/install/Chart.yaml
@@ -3,6 +3,6 @@ name: fluent-bit-invicta
 version: 0.1.20
 description: Fluent bit logger
 icon: "http://alexstorm.solenopsys.org/apps/assets/hStream.svg"
-
+appVersion: 1.0.0
 
 
