--- a/install/Chart.yaml
+++ b/install/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: fluent-bit-invicta
 version: 0.1.20
 description: Fluent bit logger
-icon: "http://alexstorm.solenopsys.org/apps/assets/hStream.svg"
+icon: "http://klogsolenopsys.org/apps/assets/hStream.svg"
 appVersion: 1.0.0
 
 
