--- a/cic/pipline.yaml
+++ b/cic/pipline.yaml
@@ -1,7 +1,7 @@
 defaults:
-    gitRegistry: git.klogsolenopsys.org
-    dockerRegistry: registry.klogsolenopsys.org
-    helmRegistry: helm.klogsolenopsys.org
+    gitRegistry: git.solenopsys.org
+    dockerRegistry: registry.solenopsys.org
+    helmRegistry: helm.solenopsys.org
     gitRepoName: solenopsys-fluent-bit
     targetImageName: solenopsys-fluent-bit
     buildForArch: "linux/amd64,linux/arm64"
